# balanca-firmware

./: CMakeLists.txt  lv_conf.h  lv_linux_disp_init.c  main.c
src/: actions.c
src/components/: botao_incrementa.c  botao_incrementa.h  wifi_screen.c  wifi_screen.h
src/ui/: .eez-project-build  actions.h  fonts.h  images.c  images.h  screens.c  screens.h  ui_font_open_sans.c  ui_image_balanca.c
